--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.3.1",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modern-drawer": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "18.7.19",
