--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@types/remark-prism": "^1.3.4",
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "normalize.css": "^8.0.1",
@@ -19,9 +20,12 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-modern-drawer": "^1.1.2",
+    "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark-parse": "^10.0.1",
+    "remark-prism": "^1.3.6",
     "remark-rehype": "^10.1.0",
+    "remark-toc": "^8.0.1",
     "unified": "^10.1.2"
   },
   "devDependencies": {
